overflow bug fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 * {
   box-sizing: border-box;
